<resources>
    <string name="STRING_APP_NAME">Todo-Tasker</string>
    <string name="STRING_CREATETASK">Create Task</string>
    <string name="STRING_ADDTASK">Add Task</string>
    <string name="STRING_MODIFYTASK">Modify Task</string>
    <string name="STRING_SAVE">Save</string>
    <string name="STRING_NAME">Name</string>
    <string name="STRING_ENTER_DATE">Due Date</string>
    <string name="STRING_SHOWTASKLIST">Show Task List</string>
    <string name="STRING_PLACEHOLDER">Placeholder</string>
    <string name="STRING_LANGUAGEBUTTON">Change Language</string>
    <string name="NOTIFICATION_TITLE">TodoTasker Reminder</string>
    <string name="NOTIFICATION_TEXT">Finish your Task</string>
    <string name="STRING_CANCEL">Cancel</string>
    <string name="STRING_COMPLETE_TASK">Complete Task</string>
    <string name="STRING_DUPLICATETASK">Duplicate Task</string>
    <string name="STRING_DELETETASK">Delete Task</string>
    <string name="STRING_DATETIMEFORMAT">dd.MM.yyyy HH:mm</string>
    <string name="STRING_YOUR_PROJECT">Your Projects</string>
    <string name="STRING_PROJECT_SETTINGS">Project Settings</string>
    <string name="STRING_BACK">Back Arrow</string>
    <string name="STRING_MODIFY_PROJECTS">Modify Projects</string>
    <string name="STRING_MODIFY_PROJECT">Modify Project</string>
...
    <string name="STRING_BACKUP_AND_RESTORE_TITLE">Backup</string>
    <string name="STRING_BACKUP_SUCCESSFUL">Backup successful</string>
    <string name="STRING_RESTORE_SUCCESSFUL">Restore successful</string>
    <string name="STRING_LAST_BACKUP">There is no backup yet</string>
    <string name="TASKS">Tasks</string>
    <string name="STRING_THEME">Theme</string>
    <string name="STRING_LIGHT_MODE">Light Mode</string>
    <string name="STRING_DARK_MODE">Dark Mode</string>
    <string name="STRING_ABOUT">About</string>
    <string name="STRING_APP_DESCRIPTION">A free to do list application for Android with custom reminder functionality and additional paid customization options / gamification features.</string>
    <string name="STRING_TEAM">Team</string>
    <string name="STRING_ROLES">"Role
Product Owner
Scrum Master
...
