...
        android:layout_marginTop="0dp"
        android:text="@string/STRING_THEME"
        android:textSize="20dp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/lightmode_btn"
        style="@style/BurgerMenuButtons"
        android:layout_width="270dp"
        android:layout_height="60dp"
        android:layout_below="@+id/themes"
        android:layout_alignParentStart="true"
        android:layout_marginStart="-3dp"
...
        android:textAlignment="textStart"
        android:textSize="12sp"
        app:icon="@drawable/darkmode_black_24"
        app:iconTint="?attr/colorPrimaryDark" />

    <Button
        android:id="@+id/darkmode_btn"
        style="@style/BurgerMenuButtons"
        android:layout_width="270dp"
        android:layout_height="60dp"
        android:layout_below="@+id/lightmode_btn"
        android:layout_alignParentStart="true"
        android:layout_marginStart="0dp"
...
