...
    <!-- IDs: -->
    <!--        Naming Convention: elementtype_usage_with_short_desc -->
    <!-- Constants(Strings): -->
    <!--        Naming Convention: TYPE_USAGESHORTDESC-->

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/todo_list"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/tToolbar"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/button_add_to_db"
        android:layout_width="75dp"
        android:layout_height="75dp"
        android:layout_alignBottom="@+id/todo_list"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="30dp"
...
