<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/PopUpWindow"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/roundedbutton7dp">

    <TextView
        android:id="@+id/textview_modifytitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="20dp"
        android:layout_marginTop="30dp"
        android:text="@string/STRING_MODIFYTASK"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textSize="22sp"
        android:textStyle="bold" />

    <ImageButton
        style="@style/SettingsButtonStyle"
        android:id="@+id/button_more_options"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="15dp"
        android:background="@drawable/baseline_more_vert_24"/>

    <TextView
        android:id="@+id/textview_modifyname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textview_modifytitle"
        android:layout_alignParentStart="true"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:text="@string/STRING_NAME"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/edittext_modify_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textview_modifyname"
        android:layout_alignParentStart="true"
        android:layout_marginStart="20dp"
        android:layout_marginTop="5dp"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="20dp"
        android:autofillHints=""
        android:ems="10"
        android:inputType="textPersonName"
        android:labelFor="@+id/edittext_name" />

    <TextView
        android:id="@+id/textview_modify_datetime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/edittext_modify_name"
        android:layout_alignParentStart="true"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:text="@string/STRING_ENTER_DATE"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/edittext_modify_datetime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textview_modify_datetime"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="20dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="20dp"
        android:autofillHints=""
        android:ems="10"
        android:inputType="none"
        android:editable="false"
        android:onClick="clickOnDateTimeField"
        android:labelFor="@+id/edittext_name" />

    <!-- Dieser Button ist stur.... die Farbe lässt sich nicht ordentlich
         ändern wenn man einen anderen Style oder Background wählt
         und Border hinzufügen geht auch null :'( -->

    <Button
        android:id="@+id/button_modify_cancel"
        android:layout_width="130dp"
        android:layout_height="50dp"
        android:layout_below="@+id/edittext_modify_datetime"
        android:layout_alignParentStart="true"
        android:layout_marginStart="20dp"
        android:layout_marginTop="50dp"
        android:backgroundTint="@color/light_grey"
        android:text="@string/STRING_CANCEL"
        android:textColor="@color/black" />

    <Button
        style = "@style/ChangingTextColor"
        android:id="@+id/button_modify_to_db"
        android:layout_width="130dp"
        android:layout_height="50dp"
        android:layout_below="@+id/edittext_modify_datetime"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="20dp"
        android:backgroundTint="@color/violet"
        android:text="@string/STRING_SAVE"
        android:textColor="@color/white"/>

    <Button
        android:id="@+id/button_complete_task"
        android:layout_width="130dp"
        android:layout_height="50dp"
        android:layout_below="@+id/button_modify_cancel"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp"
        android:backgroundTint="@color/violet"
        android:text="@string/STRING_COMPLETE_TASK"
        android:textColor="@color/white" />

</RelativeLayout>
