<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/AdditionalSettings"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@drawable/roundedbutton7dp">

    <Button
        android:id="@+id/button_duplicate_task"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="wrap_content"
        android:paddingEnd="75dp"
        android:layout_height="50dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="0dp"
        android:layout_marginBottom="0dp"
        android:backgroundTint="@color/light_grey"
        android:text="@string/STRING_DUPLICATETASK"
        android:textColor="@color/white" />

    <Button
        android:id="@+id/button_delete_task"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="wrap_content"
        android:paddingEnd="75dp"
        android:layout_height="50dp"
        android:layout_below="@+id/button_duplicate_task"
        android:layout_alignParentStart="true"
        android:layout_marginStart="0dp"
        android:layout_marginTop="0dp"
        android:backgroundTint="@color/light_grey"
        android:text="@string/STRING_DELETETASK"
        android:textColor="@color/white" />
</RelativeLayout>
